sample-1/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-sample-1-nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: istio-sample-1-nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
