sample-1/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-sample-1-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - istio-sample-1-gateway
  http:
    - route:
        - destination:
            host: istio-sample-1-nginx-service
            port:
              number: 8000
